# TiR-project

./: .gitignore  CMakeLists.txt  TiRDoc.sqlite  bullet_controller.h  bullet_frame.cpp  bullet_frame.h  bullet_list_view.h  bullet_manager.cpp  bullet_manager.h  bullet_virtual_list.h  client_manager.cpp  client_manager.h  clients_controller.h  clients_frame.cpp  clients_frame.h  clients_list_view.h  clients_virtual_list.h  common.h  controller.h  data_add_frame.h  data_frame.h  data_list_view.h  db_manager.h  db_manager_sqlite.cpp  db_manager_sqlite.h  i_data_manager.h  i_db_manager.h  i_error_observer.h  i_update_observer.h  main.cpp  virtual_list.h  weapon_controller.h  weapon_frame.cpp  weapon_frame.h  weapon_list_view.h  weapon_manager.cpp  weapon_manager.h  weapon_virtual_list.h  wx_error_observer.cpp  wx_error_observer.h
